fix: fixed input overflow on safari, fixed email regular expression

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @reset-global pc;
+@reset-global mobile;
 
 @font-face {
     font-family: 'Jost';
@@ -13,5 +14,6 @@ body {
 }
 
 html, body {
-    overflow: hidden;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
